<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chile"
    android:orientation="vertical"
    tools:context="cl.pixel.parenas.prueba31.Porvenir.Talleres.InfoTalleresPorvenir">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porvenir"
        android:layout_gravity="right"
        android:textSize="20dp"
        android:textColor="@color/letras"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        />
    <TextView
        android:id="@+id/nom_taller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/letras"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:textColor="@color/letras"
            android:textSize="20dp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/lat_taller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letras"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud"
            android:textColor="@color/letras"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/long_taller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letras"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubicacion"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:onClick="verMapaTaller"
        />

</LinearLayout>
